Make unit tests for axis2-jaxws pass on Java 17