@@ -326,7 +326,7 @@
                 <inherited>true</inherited>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>${argLine} -Xms256m -Xmx512m</argLine>
+                    <argLine>${argLine} -Xms256m -Xmx512m --add-opens java.base/java.net=ALL-UNNAMED</argLine>
                     <!-- Enable the next 2 lines if you want to attach a debugger
                     <argLine>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>-->
                     <includes>
